kube/deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: identity
  namespace: deckhub
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: identity
    spec:
      containers:
      - image: deckhub/identity:1.0.7
        imagePullPolicy: Always
        name: identity
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: identity
  namespace: deckhub
spec:
  ports:
  - port: 80
    protocol: TCP
    name: http
  selector:
    app: identity
  sessionAffinity: ClientIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: identity
  namespace: deckhub
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: deckhub.app
    http:
      paths:
      - path: /Identity
        backend:
          serviceName: identity
          servicePort: 80
      - path: /identity
        backend:
          serviceName: identity
          servicePort: 80
